Added the ZonedDateTime and Enumerations

--- a/src/main/webapp/app/entities/edms-location/edms-locationocrData-detail.html
+++ b/src/main/webapp/app/entities/edms-location/edms-locationocrData-detail.html
@@ -8,9 +8,9 @@
         <dd>
             <span>{{vm.edmsLocation.actualDirectory}}</span>
         </dd>
-        <dt><span data-translate="ocrGatewayApp.edmsLocation.statusId">Status Id</span></dt>
+        <dt><span data-translate="ocrGatewayApp.edmsLocation.status">Status</span></dt>
         <dd>
-            <span>{{vm.edmsLocation.statusId}}</span>
+            <span data-translate="{{'ocrGatewayApp.Status.' + vm.edmsLocation.status}}">{{vm.edmsLocation.status}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsLocation.edmsResponse">Edms Response</span></dt>
         <dd>
