--- a/src/main/webapp/app/entities/edms-request/edms-requestocrData-detail.html
+++ b/src/main/webapp/app/entities/edms-request/edms-requestocrData-detail.html
@@ -18,11 +18,11 @@
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsRequest.startDate">Start Date</span></dt>
         <dd>
-            <span>{{vm.edmsRequest.startDate | date:'mediumDate'}}</span>
+            <span>{{vm.edmsRequest.startDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsRequest.endDate">End Date</span></dt>
         <dd>
-            <span>{{vm.edmsRequest.endDate | date:'mediumDate'}}</span>
+            <span>{{vm.edmsRequest.endDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsRequest.lastRunBy">Last Run By</span></dt>
         <dd>
@@ -34,7 +34,7 @@
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsRequest.lastRunDate">Last Run Date</span></dt>
         <dd>
-            <span>{{vm.edmsRequest.lastRunDate | date:'mediumDate'}}</span>
+            <span>{{vm.edmsRequest.lastRunDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.edmsRequest.ocrSession">Ocr Session</span></dt>
         <dd>
