--- a/src/main/webapp/app/entities/ocr-session/ocr-sessionocrData-detail.html
+++ b/src/main/webapp/app/entities/ocr-session/ocr-sessionocrData-detail.html
@@ -12,9 +12,9 @@
         <dd>
             <span>{{vm.ocrSession.description}}</span>
         </dd>
-        <dt><span data-translate="ocrGatewayApp.ocrSession.statusId">Status Id</span></dt>
+        <dt><span data-translate="ocrGatewayApp.ocrSession.status">Status</span></dt>
         <dd>
-            <span>{{vm.ocrSession.statusId}}</span>
+            <span data-translate="{{'ocrGatewayApp.Status.' + vm.ocrSession.status}}">{{vm.ocrSession.status}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.ocrSession.serverFilePath">Server File Path</span></dt>
         <dd>
