--- a/src/main/webapp/app/entities/request-wf/request-wfocrData-detail.html
+++ b/src/main/webapp/app/entities/request-wf/request-wfocrData-detail.html
@@ -4,9 +4,13 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="dl-horizontal jh-entity-details">
-        <dt><span data-translate="ocrGatewayApp.requestWf.statusId">Status Id</span></dt>
+        <dt><span data-translate="ocrGatewayApp.requestWf.status">Status</span></dt>
         <dd>
-            <span>{{vm.requestWf.statusId}}</span>
+            <span data-translate="{{'ocrGatewayApp.Status.' + vm.requestWf.status}}">{{vm.requestWf.status}}</span>
+        </dd>
+        <dt><span data-translate="ocrGatewayApp.requestWf.wfStatus">Wf Status</span></dt>
+        <dd>
+            <span data-translate="{{'ocrGatewayApp.WfStatus.' + vm.requestWf.wfStatus}}">{{vm.requestWf.wfStatus}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.requestWf.updatedBy">Updated By</span></dt>
         <dd>
