--- a/src/main/webapp/app/entities/service-resp/service-respocrData-detail.html
+++ b/src/main/webapp/app/entities/service-resp/service-respocrData-detail.html
@@ -17,11 +17,11 @@
         </dd>
         <dt><span data-translate="ocrGatewayApp.serviceResp.startDate">Start Date</span></dt>
         <dd>
-            <span>{{vm.serviceResp.startDate | date:'mediumDate'}}</span>
+            <span>{{vm.serviceResp.startDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.serviceResp.endDate">End Date</span></dt>
         <dd>
-            <span>{{vm.serviceResp.endDate | date:'mediumDate'}}</span>
+            <span>{{vm.serviceResp.endDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.serviceResp.lastRunBy">Last Run By</span></dt>
         <dd>
@@ -33,7 +33,7 @@
         </dd>
         <dt><span data-translate="ocrGatewayApp.serviceResp.lastRunDate">Last Run Date</span></dt>
         <dd>
-            <span>{{vm.serviceResp.lastRunDate | date:'mediumDate'}}</span>
+            <span>{{vm.serviceResp.lastRunDate | date:'medium'}}</span>
         </dd>
         <dt><span data-translate="ocrGatewayApp.serviceResp.edmsDownload">Edms Download</span></dt>
         <dd>
