--- a/src/main/webapp/app/entities/service-resp/service-respocrData-dialog.html
+++ b/src/main/webapp/app/entities/service-resp/service-respocrData-dialog.html
@@ -50,8 +50,8 @@
         <div class="form-group">
             <label class="control-label" data-translate="ocrGatewayApp.serviceResp.startDate" for="field_startDate">Start Date</label>
                 <div class="input-group">
-                    <input id="field_startDate" type="text" class="form-control" name="startDate" uib-datepicker-popup="{{dateformat}}" ng-model="vm.serviceResp.startDate" is-open="vm.datePickerOpenStatus.startDate"
-                    />
+                    <input id="field_startDate" type="text" class="form-control" name="startDate" datetime-picker="{{dateformat}}" ng-model="vm.serviceResp.startDate" is-open="vm.datePickerOpenStatus.startDate"
+                      />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('startDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
@@ -60,8 +60,8 @@
         <div class="form-group">
             <label class="control-label" data-translate="ocrGatewayApp.serviceResp.endDate" for="field_endDate">End Date</label>
                 <div class="input-group">
-                    <input id="field_endDate" type="text" class="form-control" name="endDate" uib-datepicker-popup="{{dateformat}}" ng-model="vm.serviceResp.endDate" is-open="vm.datePickerOpenStatus.endDate"
-                    />
+                    <input id="field_endDate" type="text" class="form-control" name="endDate" datetime-picker="{{dateformat}}" ng-model="vm.serviceResp.endDate" is-open="vm.datePickerOpenStatus.endDate"
+                      />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('endDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
@@ -82,8 +82,8 @@
         <div class="form-group">
             <label class="control-label" data-translate="ocrGatewayApp.serviceResp.lastRunDate" for="field_lastRunDate">Last Run Date</label>
                 <div class="input-group">
-                    <input id="field_lastRunDate" type="text" class="form-control" name="lastRunDate" uib-datepicker-popup="{{dateformat}}" ng-model="vm.serviceResp.lastRunDate" is-open="vm.datePickerOpenStatus.lastRunDate"
-                    />
+                    <input id="field_lastRunDate" type="text" class="form-control" name="lastRunDate" datetime-picker="{{dateformat}}" ng-model="vm.serviceResp.lastRunDate" is-open="vm.datePickerOpenStatus.lastRunDate"
+                      />
                     <span class="input-group-btn">
                         <button type="button" class="btn btn-default" ng-click="vm.openCalendar('lastRunDate')"><i class="glyphicon glyphicon-calendar"></i></button>
                     </span>
