--- a/src/main/webapp/app/entities/service-wf/service-wfocrData-dialog.html
+++ b/src/main/webapp/app/entities/service-wf/service-wfocrData-dialog.html
@@ -14,18 +14,46 @@
                     ng-model="vm.serviceWf.id" readonly />
         </div>
         <div class="form-group">
-            <label class="control-label" data-translate="ocrGatewayApp.serviceWf.statusId" for="field_statusId">Status Id</label>
-            <input type="number" class="form-control" name="statusId" id="field_statusId"
-                    ng-model="vm.serviceWf.statusId"
-                    required />
-            <div ng-show="editForm.statusId.$invalid">
+            <label class="control-label" data-translate="ocrGatewayApp.serviceWf.status" for="field_status">Status</label>
+            <select class="form-control" name="status" ng-model="vm.serviceWf.status" id="field_status" required>
+                <option value="DEFINED" data-translate="ocrGatewayApp.Status.DEFINED">DEFINED</option>
+                <option value="LOADED" data-translate="ocrGatewayApp.Status.LOADED">LOADED</option>
+                <option value="VALIDATED" data-translate="ocrGatewayApp.Status.VALIDATED">VALIDATED</option>
+                <option value="READY" data-translate="ocrGatewayApp.Status.READY">READY</option>
+                <option value="REQUESTED" data-translate="ocrGatewayApp.Status.REQUESTED">REQUESTED</option>
+                <option value="WAITING" data-translate="ocrGatewayApp.Status.WAITING">WAITING</option>
+                <option value="PROCESSING" data-translate="ocrGatewayApp.Status.PROCESSING">PROCESSING</option>
+                <option value="COMPLETED" data-translate="ocrGatewayApp.Status.COMPLETED">COMPLETED</option>
+                <option value="PROMISED" data-translate="ocrGatewayApp.Status.PROMISED">PROMISED</option>
+                <option value="FULFILLED" data-translate="ocrGatewayApp.Status.FULFILLED">FULFILLED</option>
+                <option value="PROCESSED" data-translate="ocrGatewayApp.Status.PROCESSED">PROCESSED</option>
+                <option value="RESPONDED" data-translate="ocrGatewayApp.Status.RESPONDED">RESPONDED</option>
+            </select>
+            <div ng-show="editForm.status.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.statusId.$error.required" data-translate="entity.validation.required">
+                    ng-show="editForm.status.$error.required" data-translate="entity.validation.required">
                     This field is required.
                 </p>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="control-label" data-translate="ocrGatewayApp.serviceWf.wfStatus" for="field_wfStatus">Wf Status</label>
+            <select class="form-control" name="wfStatus" ng-model="vm.serviceWf.wfStatus" id="field_wfStatus" required>
+                <option value="STARTING" data-translate="ocrGatewayApp.WfStatus.STARTING">STARTING</option>
+                <option value="STARTED" data-translate="ocrGatewayApp.WfStatus.STARTED">STARTED</option>
+                <option value="PROCESSING" data-translate="ocrGatewayApp.WfStatus.PROCESSING">PROCESSING</option>
+                <option value="ABORTING" data-translate="ocrGatewayApp.WfStatus.ABORTING">ABORTING</option>
+                <option value="ABORTED" data-translate="ocrGatewayApp.WfStatus.ABORTED">ABORTED</option>
+                <option value="COMPLETING" data-translate="ocrGatewayApp.WfStatus.COMPLETING">COMPLETING</option>
+                <option value="COMPLETED" data-translate="ocrGatewayApp.WfStatus.COMPLETED">COMPLETED</option>
+                <option value="READY" data-translate="ocrGatewayApp.WfStatus.READY">READY</option>
+                <option value="PUBLISHED" data-translate="ocrGatewayApp.WfStatus.PUBLISHED">PUBLISHED</option>
+                <option value="RECEIVED" data-translate="ocrGatewayApp.WfStatus.RECEIVED">RECEIVED</option>
+            </select>
+            <div ng-show="editForm.wfStatus.$invalid">
                 <p class="help-block"
-                    ng-show="editForm.statusId.$error.number" data-translate="entity.validation.number">
-                    This field should be a number.
+                    ng-show="editForm.wfStatus.$error.required" data-translate="entity.validation.required">
+                    This field is required.
                 </p>
             </div>
         </div>
